--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             </aside>
         </main>
     </div>
+    <footer class="footer">
+        <div class="footer-content">
+            <p><span data-lang-key="footer_text">This tool is open source, created by</span> <a href="https://qusai.pro" target="_blank" rel="noopener noreferrer" data-lang-key="footer_author">Qusai Ismail</a> • <a href="https://github.com/qusaismael/Privacy-Check" target="_blank" rel="noopener noreferrer" data-lang-key="footer_repo">View on GitHub</a></p>
+        </div>
+    </footer>
     <button class="back-to-top" id="back-to-top-btn" title="Go to top">↑</button>
     <script src="script.js"></script>
 </body>
